# CoAwaitLib

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CoAwaitLib.kdev4  README.md  conanfile.txt
benchmark/: CoFutureBenchmarks.cpp  CoFutureStandalone.cpp  CoFutureStandalone2.cpp
examples/: CMakeLists.txt  asio_echo_client.cpp  asio_echo_server.cpp  readme_example.cpp
include/co/: async.hpp  await.hpp  channel.hpp  coroutine.hpp  executor.hpp  foreach.hpp  future.hpp  generate.hpp  mutex.hpp  networking.hpp  pplx_task_awaiter.hpp  routine.hpp  routine_specific_ptr.hpp  timed_mutex.hpp  yieldto.hpp
test/: CMakeLists.txt  CatchMain.cpp  CoChannelTests.cpp  CoCoroutineTests.cpp  CoForEachTests.cpp  CoFutureTests.cpp  CoMutexTests.cpp  CoNetworkingTests.cpp  CoPromiseTests.cpp  CoRoutineSpecificStorage.cpp  CoRoutineTests.cpp  CoUnbufferedChannelTests.cpp  CoYieldToTests.cpp  helper.hpp
